# f1_virtual_strategist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest-coverage.yml
docs/: DATA_ENGINE.md  MODEL_ARCHITECTURE.md  STRATEGY_ENGINE.md
src/f1_virtual_strategist/data_engine/: ingestion.py
tests/data_engine/: test_ingestion.py
